@@ -1,10 +1,10 @@
 # This file controls the state of SELinux on the system.
 # SELINUX= can take one of these three values:
-#	enforcing - SELinux security policy is enforced.
-#	permissive - SELinux prints warnings instead of enforcing.
-#	disabled - SELinux is fully disabled.
+# enforcing - SELinux security policy is enforced.
+# permissive - SELinux prints warnings instead of enforcing.
+# disabled - SELinux is fully disabled.
 SELINUX=<%= @_state %>
 # SELINUXTYPE= type of policy in use. Possible values are:
-#	targeted - Only targeted network daemons are protected.
-#	strict - Full SELinux protection.
+# targeted - Only targeted network daemons are protected.
+# strict - Full SELinux protection.
 SELINUXTYPE=<%= @mode %>
