@@ -1,3 +1,7 @@
+* Mon Apr 17 2017 Nick Markowski <nmarkowski@keywcorp.com> - 2.0.3-0
+- Fixed a bug wherein setenforce would run if selinux was disabled
+- Changes in selinux state incur a reboot notification
+
 * Tue Mar 28 2017 Nick Miller <nick.miller@onyxpoint.com> 2.0.2-0
 - Defaulted selinux::ensure to the selinux catalyst for better control
   of selinux enforcement.
